Added feedback page
Fixed a few bugs

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -128,6 +128,7 @@
               networking.
             </span>
           </p>
+          <img src="/images/group-pic/group-pic-2.png" alt="" class="rounded shadow-lg" style="width: 38%; float: right;" data-aos="fade-up">
           <h2 data-aos="fade-up">Goal</h2>
           <p style="width: 60%; line-height: 28px;">
             <span style="font-size: 20px !important" data-aos="fade-up">
