--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!-- 
+<!--
     Official Website of ACM Student Chapter of Vidyalankar Institute of Technology
     Copyright (C) 2018  VEDANT NANDOSKAR
 
@@ -81,6 +81,10 @@
 
     <!-- =========================== Google Fonts Link ======================== -->
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    
+    <!-- =========================== Load D3 =================================== -->
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
 
   </head>
   <body>
