--- a/views/stylesheets/header.css
+++ b/views/stylesheets/header.css
@@ -2,7 +2,7 @@
 /* ---- reset ---- */
 body {
   margin: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.85);
   font: normal 75% Arial, Helvetica, sans-serif;
 }
 canvas {
@@ -22,6 +22,30 @@ canvas {
   background-position: 50% 50%;
 } /* ---- stats.js ---- */
 
+#partialHome-0{
+  background-image: url("/images/group-pic/group-placeholder.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: 100%;
+}
+
+@media only screen and (max-width: 1000px) {
+  .paraAboutUsLand {
+    width: 100% !important;
+  }
+  #partialHome-0{
+      background-attachment: scroll;
+        background-position: center top;
+  }
+  #partialHome-1{
+    padding: 20px 0px 0px 0px;
+    margin: 0px;
+  }
+  #aboutLandArrow{
+    padding: 0px;
+  }
+}
 
 .navScrolled{
   background-color: blue !important;
