Fixed some bugs

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -52,7 +52,7 @@
           </div>
             <div class="row" style="padding-bottom: 0; margin-bottom: 0; bottom: 0; height: 20%">
               <div class="arrow bounce" style="margin-right: 100%; margin-bottom: 5%; margin-top: 2%">
-                <a class="fa fa-arrow-up fa-3x btn btn-dark scrollup" href="#" data-toggle="tooltip" data-placement="top" title="Go up" style="background-color: rgba(0, 0, 0, 0); border-width: 0;"></a>
+                <a class="btn btn-dark scrollup" href="#" data-toggle="tooltip" data-placement="top" title="Go up" style="background-color: rgba(0, 0, 0, 0); border-width: 0;"> <img src="/images/arrow-up.png" alt="" style="width: 40px;"> </a>
               </div>
             </div>
         </div>
