--- a/views/stylesheets/events.css
+++ b/views/stylesheets/events.css
@@ -303,8 +303,8 @@ svg circle {
 .close {
   color: white;
   position: absolute;
-  top: 10px;
-  right: 25px;
+  top: 25px;
+  right: 20px;
   font-size: 35px;
   font-weight: bold;
   transform: rotate(-90deg);
@@ -330,8 +330,8 @@ svg circle {
 
 @media only screen and (max-width: 1000px) {
   #close-cursor {
-    margin-top: 7%;
-    margin-right: 5%;
+    /* margin-top: 7%;
+    margin-right: 5%; */
   }
 }
 
@@ -360,22 +360,22 @@ svg circle {
   }
 
 
-.item-1 {
-  background-image: url('https://images.unsplash.com/photo-1499198116522-4a6235013d63?auto=format&fit=crop&w=1233&q=80');
-}
+  .item-1 {
+    background-image: url('/images/previous-events/web-dev/workshopLive1.png');
+  }
 
-.item-2 {
-  background-image: url('https://images.unsplash.com/photo-1492760864391-753aaae87234?auto=format&fit=crop&w=1336&q=80');
-}
+  .item-2 {
+    background-image: url('/images/previous-events/web-dev/workshopLive2.png');
+  }
 
-.item-3 {
-  background-image: url('https://images.unsplash.com/photo-1503631285924-e1544dce8b28?auto=format&fit=crop&w=1234&q=80');
-}
+  .item-3 {
+    background-image: url('/images/previous-events/web-dev/workshopLive5.png');
+  }
 
-.item-4 {
-  background-image: url('https://images.unsplash.com/photo-1510425463958-dcced28da480?auto=format&fit=crop&w=1352&q=80');
-}
+  .item-4 {
+    background-image: url('/images/previous-events/web-dev/workshopLive4.png');
+  }
 
-.item-5 {
-  background-image: url('https://images.unsplash.com/photo-1503602642458-232111445657?auto=format&fit=crop&w=1234&q=80');
-}
+  .item-5 {
+    background-image: url('/images/previous-events/web-dev/workshopLive3.png');
+  }
