--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -105,7 +105,7 @@
     </div>
     <!-- ///////////// Down Arrow //////////////////////////// -->
     <div class="arrow bounce" style=" padding-top: 2%;">
-      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-whoAbout" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+      <button class="btn btn-dark scrolldown-whoAbout" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0; width: 50px; height: 50px;"> <img src="/images/arrow-down.png" style="height: 70%; width: 100%;" alt=""> </button>
     </div>
   </div>
 
@@ -143,7 +143,7 @@
     </div>
     <!-- ///////////// Down Arrow //////////////////////////// -->
     <div class="arrow bounce" style=" padding-top: 2%;">
-      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-aimAbout" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+      <button class="btn btn-dark scrolldown-aimAbout" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0; width: 50px; height: 50px;"> <img src="/images/arrow-down.png" style="height: 70%; width: 100%;" alt=""> </button>
     </div>
   </div>
 
