--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,10 +65,14 @@
     <!-- ============================== Image Hover Link =======================-->
     <link rel="stylesheet" href="../stylesheets/imagehover.css">
 
+
     <!-- ======================== Font Awesome Link ============================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-     integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0="
-     crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    integrity="sha384-kW+oWsYx3YpxvjtZjFXqazFpA7UP/MbiY4jvs+RWZo2+N94PFZ36T6TFkc9O3qoB"
+    crossorigin="anonymous"></script>
 
      <!-- =========================== AOS Links ================================-->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.3/aos.css"
@@ -81,7 +85,7 @@
 
     <!-- =========================== Google Fonts Link ======================== -->
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    
+
     <!-- =========================== Load D3 =================================== -->
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
