Made some code optimisation

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -75,7 +75,7 @@
   </div>
 <!-- ///////////// Down Arrow //////////////////////////// -->
 <div class="arrow bounce" style=" padding-top: 10%; margin-bottom: 2%">
-  <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-aboutHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+  <button class="btn btn-dark scrolldown-aboutHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0;; width: 50px; height: 50px;"> <img src="/images/arrow-down.png" style="height: 70%; width: 100%;" alt=""> </button>
 </div>
 
 <!-- //////////////////////////////////////////////////////////////////////  About Us Div ////////////////////////////////////////////////////////////////////////////////-->
@@ -99,7 +99,7 @@
     </div>
     <!-- ///////////// Down Arrow //////////////////////////// -->
     <div class="arrow bounce" style=" padding-top: 2%;">
-      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-carouselHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+      <button class="btn btn-dark scrolldown-carouselHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0; width: 50px; height: 50px;"> <img src="/images/arrow-down.png" style="height: 70%; width: 100%;" alt=""> </button>
     </div>
   </div>
 
@@ -170,7 +170,7 @@
     </div>
     <!-- ///////////// Down Arrow //////////////////////////// -->
     <div class="arrow bounce" style=" padding-top: 2%;">
-      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-teamHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+      <button class="btn btn-dark scrolldown-teamHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0; width: 50px; height: 50px;"> <img src="/images/arrow-down.png" style="height: 70%; width: 100%;" alt=""> </button>
     </div>
   </div>
 
