--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -74,7 +74,7 @@
     </h1>
   </div>
 <!-- ///////////// Down Arrow //////////////////////////// -->
-<div class="arrow bounce" style=" padding-top: 10%; margin-bottom: 2%">
+<div class="arrow bounce" style=" padding-top: 12%; margin-bottom: 2%">
   <button class="btn btn-dark scrolldown-aboutHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0;; width: 50px; height: 50px;"> <img src="/images/arrow-down.png" style="height: 70%; width: 100%;" alt=""> </button>
 </div>
 
@@ -323,7 +323,7 @@
                 <img class="rounded-circle profImg" src="/images/core-mem/surajkCircle.jpg" alt="" style="width: 100%; height: 100%; border-width: 0px;" data-aos="fade-up">
                   <div class="overlay rounded-circle">
                      <h2 class="blurHover" style="margin-top: 20%">Suraj Kewat</h2>
-                     <h6 class="blurHover">Photography Head</h6>
+                     <h6 class="blurHover">Creative Head</h6>
                      <!-- <a class="info" href="#">link here</a> -->
                   </div>
               </div>
@@ -333,7 +333,7 @@
                 <img class="rounded-circle profImg" src="/images/core-mem/rohankCircle.png" alt="" style="width: 100%; height: 100%; border-width: 0px;" data-aos="fade-up">
                   <div class="overlay rounded-circle">
                      <h2 class="blurHover" style="margin-top: 20%">Rohan Kokkula</h2>
-                     <h6 class="blurHover">Photography Head</h6>
+                     <h6 class="blurHover">Creative Head</h6>
                      <a class="info" href="#team" onclick="window.open('https://github.com/rohan0301', '_blank')"> <img src="/images/share-icons/github-white.png" alt="" style="width: 22%; height: 22%; margin-left: 5%"> </a>
                      <a class="info" href="#team" onclick="window.open('https://www.linkedin.com/in/rohan-kokkula-0a8b72137/', '_blank')"> <img src="/images/share-icons/linkedin-color.png" alt="" style="width: 30%; height: 30%; margin-left: 0%"></a>
                   </div>
