--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>ACM-VIT Official Website</title>
     <link rel="shortcut icon" href="/images/logo/ACM_Logo-icon.ico">
 
